--- a/car_test/Views/Home/Index.cshtml
+++ b/car_test/Views/Home/Index.cshtml
@@ -20,8 +20,7 @@
     <link href="~/lib/jquery-ui-1.13.2.custom/jquery-ui.css" rel="stylesheet" />
     <script src="~/lib/jquery-ui-1.13.2.custom/jquery-ui.min.js"></script>
     <script src="~/lib/jquery-ui-1.13.2.custom/jquery-ui.js"></script>
-    <script src="~/js/jquery.blockui.js"></script>
-
+<script src="~/js/jquery/jquery.blockUI.js"></script>
 
 
 </head>
