--- a/car_test/Views/Home/Index.cshtml
+++ b/car_test/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
     <link href="~/lib/jquery-ui-1.13.2.custom/jquery-ui.css" rel="stylesheet" />
     <script src="~/lib/jquery-ui-1.13.2.custom/jquery-ui.min.js"></script>
     <script src="~/lib/jquery-ui-1.13.2.custom/jquery-ui.js"></script>
-    <script src="~/js/jquery.blockui.js"></script>
+    <script src="~/js/jquery/jquery.blockUI.js"></script>
 
 
 
@@ -28,7 +28,7 @@
 
 <div class="text-center">
     <h1 class="display-4">車輛ESG查詢系統</h1>
-    @*<p>local version</p>*@
+    <p>local version</p>
 </div>
 
 @*<form style="margin-left:10px;">*@
@@ -60,7 +60,7 @@
 </div>
 
 <div class="selectArea">
-    <label>Correlation 分析(請任意選擇兩項資料以繪製在同一張圖表)： </label><br />
+    <label>可選擇任意兩項類別以繪製同一張圖表進行分析：</label><br />
     <select id="carDataTypeSelect1" name="carDataTypeSelect">
         <option value="">請選擇車輛資料類別</option>
     </select>、
@@ -75,7 +75,7 @@
 <div class="selectArea">
     <table>
         <tr>
-            Over/Under Threshold 分析(請選擇車輛資料) :
+            請選擇車輛資料類別和填入凸顯範圍 (複選) :
         </tr>
         <tr>
             <td>
